--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <script type="text/javascript" src="function.js"></script>
+    <script src="function.js"></script>
 </head>
 
 <body>
-    <header class="clear">
+    <header>
         <div class="content clear">
             <a class="logo" href=""></a>
-            <ul class="nav">
+            <ul class="nav clear">
                 <li>
                     <a href="#">Home</a>
                 </li>
@@ -50,8 +50,8 @@
         <div class="banner">
             <div>
                 <ul class="slide">
-                <li>html5,css3</li>
-            </ul>
+                    <li>html5,css3</li>
+                </ul>
             </div>
         </div>
         <div class="box content clear">
@@ -60,7 +60,8 @@
                 <ul class="block clear">
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt='' />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
+                            amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
@@ -68,17 +69,21 @@
                     </li>
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt='' />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
+                            amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
                         </div>
                     </li>
                 </ul>
-                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet
-                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus
+                    quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit,
+                    dapibus ac augue ut, porttitor
+                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
+                    lacus
+                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
+                    sit.</p>
             </section>
             <section class="skills">
                 <h2 class="title">Our Skills</h2>
@@ -124,88 +129,92 @@
         </div>
         <section class="bg">
             <div class="projects content">
-            <h2 class="title center">Latest portfolio projects</h2>
-            <span class="note">Filter by:</span>
-            <ul class="filterbtn clear">
-                <li>
-                    <a href="#">All</a>
-                </li>
-                <li>
-                    <a href="#">Web designer</a>
-                </li>
-                <li>
-                    <a href="#">Web Development</a>
-                </li>
-                <li>
-                    <a href="#">SEO Management</a>
-                </li>
-            </ul>
-            <ul class="filterbox clear">
-                <li>
-                    <a href="#">
-                        <img src="images/1.jpg" alt='' />
-                    </a>
-                    <a href="#">
-                        <h3>Project Title</h3>
-                    </a>
-                    <span>Project Category</span>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/2.jpg" alt='' />
-                    </a>
-                    <a href="#">
-                        <h3>Project Title</h3>
-                    </a>
-                    <span>Project Category</span>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/3.jpg" alt='' />
-                    </a>
-                    <a href="#">
-                        <h3>Project Title</h3>
-                    </a>
-                    <span>Project Category</span>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/5.jpg" alt='' />
-                    </a>
-                    <a href="#">
-                        <h3>Project Title</h3>
-                    </a>
-                    <span>Project Category</span>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/5.jpg" alt='' />
-                    </a>
-                    <a href="#">
-                        <h3>Project Title</h3>
-                    </a>
-                    <span>Project Category</span>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="images/6.jpg" alt='' />
-                    </a>
-                    <a href="#">
-                        <h3>Project Title</h3>
-                    </a>
-                    <span>Project Category</span>
-                </li>
-            </ul>
-            <input type="button" value="bROWSE ALL PROJECTS">
-        </div>
+                <h2 class="title center">Latest portfolio projects</h2>
+                <span class="note">Filter by:</span>
+                <ul class="filterbtn clear">
+                    <li>
+                        <a href="#">All</a>
+                    </li>
+                    <li>
+                        <a href="#">Web designer</a>
+                    </li>
+                    <li>
+                        <a href="#">Web Development</a>
+                    </li>
+                    <li>
+                        <a href="#">SEO Management</a>
+                    </li>
+                </ul>
+                <ul class="filterbox clear">
+                    <li>
+                        <a href="#">
+                            <img src="images/1.jpg" alt='' />
+                        </a>
+                        <a href="#">
+                            <h3>Project Title</h3>
+                        </a>
+                        <span>Project Category</span>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/2.jpg" alt='' />
+                        </a>
+                        <a href="#">
+                            <h3>Project Title</h3>
+                        </a>
+                        <span>Project Category</span>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/3.jpg" alt='' />
+                        </a>
+                        <a href="#">
+                            <h3>Project Title</h3>
+                        </a>
+                        <span>Project Category</span>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/5.jpg" alt='' />
+                        </a>
+                        <a href="#">
+                            <h3>Project Title</h3>
+                        </a>
+                        <span>Project Category</span>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/5.jpg" alt='' />
+                        </a>
+                        <a href="#">
+                            <h3>Project Title</h3>
+                        </a>
+                        <span>Project Category</span>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="images/6.jpg" alt='' />
+                        </a>
+                        <a href="#">
+                            <h3>Project Title</h3>
+                        </a>
+                        <span>Project Category</span>
+                    </li>
+                </ul>
+                <input type="button" value="bROWSE ALL PROJECTS" />
+            </div>
         </section>
         <section class="team">
             <div class="content">
                 <h2 class="title center">What is our team structure?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet
-                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit. Pellentesque imperdiet purus quis metus
+                    imperdiet
+                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
+                    porttitor
+                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
+                    lacus
+                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
+                    sit.</p>
                 <ul class="team-img clear">
                     <li>
                         <img src="images/pep.jpg" alt="" />
@@ -232,7 +241,8 @@
                 <i class="fa-icon"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.
                 </p>
                 <a href="">REad More</a>
@@ -241,7 +251,8 @@
                 <i class="fa-icon"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
@@ -249,7 +260,8 @@
                 <i class="fa-icon"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
@@ -257,18 +269,19 @@
                 <i class="fa-icon"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
+                    consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
         </ul>
         <section class="pricing">
             <div class="content">
-                <h2 class="title center">
-                    Pricing Tables
-                </h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae adipiscing
-                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae adipiscing
+                <h2 class="title center"> Pricing Tables</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae
+                    adipiscing
+                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae
+                    adipiscing
                     diam ultrices nec.
                 </p>
                 <div class="wrap-box clear">
@@ -286,9 +299,7 @@
                             <li>10 GB Bandwidth</li>
                             <li>5 GB Diskspace</li>
                             <li class="button">
-                                <a href="#" class="btn">
-                                    Sign up
-                                </a>
+                                <a href="#" class="btn">Sign up</a>
                             </li>
                         </ul>
                     </div>
@@ -298,8 +309,7 @@
                             <i class="fa"></i>
                         </div>
                         <ul>
-                            <li class="price">
-                                <span>$9.50</span>/month</li>
+                            <li class="price"><span>$9.50</span>/month</li>
                             <li>Base Package</li>
                             <li>No support</li>
                             <li>10 Email Address</li>
@@ -373,15 +383,14 @@
                         <input type="email" required="">
                     </div>
                     <div class="form-input clear">
-                        <label>Phone
-                        </label>
+                        <label>Phone</label>
                         <input type="tel">
                     </div>
                     <div class="form-input clear">
                         <label>Message
                             <span class="required">*</span>
                         </label>
-                        <textarea required="required"></textarea>
+                        <textarea required=""></textarea>
                     </div>
                     <div class="form-input">
                         <input type="submit" class="btn" value="Submit">
@@ -515,10 +524,11 @@
             </div>
             <div class="footer-menu clear">
                 <div class="logo"></div>
-                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to our newsletter.</p>
+                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to
+                    our newsletter.</p>
                 <form class="action">
-                    <input type="email" value name="EMAIL" placeholder="Enter your Email">
-                    <input type="submit" value="Send">
+                    <input type="email" placeholder="Enter your Email" />
+                    <input type="submit" value="Send" />
                 </form>
             </div>
             <div class="footer-menu">
@@ -571,7 +581,7 @@
             </div>
         </div>
         <div class="footerbottom">
-            <div class="row content">
+            <div class="content">
                 <div class="copyrights">
                     © Copyrights
                     <b>EXCEPTION</b> 2014. All rights reserved.
