--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -127,8 +127,8 @@
                 </ul>
             </section>
         </div>
-        <section class="bg">
-            <div class="projects content">
+        <section class="projects">
+            <div class="content">
                 <h2 class="title center">Latest portfolio projects</h2>
                 <span class="note">Filter by:</span>
                 <ul class="filterbtn clear">
@@ -208,13 +208,9 @@
             <div class="content">
                 <h2 class="title center">What is our team structure?</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit. Pellentesque imperdiet purus quis metus
-                    imperdiet
-                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
-                    porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
-                    lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
-                    sit.</p>
+                    imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
+                    porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
+                    lacus id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
                 <ul class="team-img clear">
                     <li>
                         <img src="images/pep.jpg" alt="" />
@@ -238,40 +234,35 @@
         <ul class="service-box content clear">
             <li>
                 <!-------------Если вставить разные иконки, есть смысл оставить класс fa?---------------->
-                <i class="fa-icon"></i>
+                <i></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.
-                </p>
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-icon"></i>
-                <span>Collecting</span>
-                <h3>Requirements</h3>
+                <i></i>
+                <span>Inspiring</span>
+                <h3>Graphic Design</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-icon"></i>
-                <span>Collecting</span>
-                <h3>Requirements</h3>
+                <i></i>
+                <span>Implementing</span>
+                <h3>The Template</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-icon"></i>
-                <span>Collecting</span>
-                <h3>Requirements</h3>
+                <i></i>
+                <span>Testing</span>
+                <h3>Functionality</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin
-                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
         </ul>
@@ -279,11 +270,8 @@
             <div class="content">
                 <h2 class="title center"> Pricing Tables</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae
-                    adipiscing
-                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae
-                    adipiscing
-                    diam ultrices nec.
-                </p>
+                    adipiscing diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae
+                    adipiscing diam ultrices nec.</p>
                 <div class="wrap-box clear">
                     <div class="pricing-table">
                         <div class="tablehead">
