Revert "Merge branch 'master' of https://github.com/sergiuandrian/sergiuandrian.github.io"
This reverts commit f9526327f0b5a959f9162176fad60f5170b12c8f, reversing
changes made to 473cc63d4c62d96e45f35d60468fc421ee7f5443.

--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <script src="function.js"></script>
+    <script type="text/javascript" src="function.js"></script>
 </head>
 
 <body>
-    <header>
+    <header class="clear">
         <div class="content clear">
             <a class="logo" href=""></a>
-            <ul class="nav clear">
+            <ul class="nav">
                 <li>
                     <a href="#">Home</a>
                 </li>
@@ -50,8 +50,8 @@
         <div class="banner">
             <div>
                 <ul class="slide">
-                    <li>html5,css3</li>
-                </ul>
+                <li>html5,css3</li>
+            </ul>
             </div>
         </div>
         <div class="box content clear">
@@ -60,8 +60,7 @@
                 <ul class="block clear">
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt='' />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
-                            amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
@@ -69,21 +68,17 @@
                     </li>
                     <li class="slide_comment">
                         <img src="images/4.jpg" alt='' />
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit
-                            amet, consectetur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesqueLorem ipsum dolor sit amet, consectetur.</p>
                         <div class="author">
                             <span class="name">John Smith:</span>
                             <span class="position">ThemeForest</span>
                         </div>
                     </li>
                 </ul>
-                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus
-                    quis metus imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit,
-                    dapibus ac augue ut, porttitor
-                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
-                    lacus
-                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor
-                    sit.</p>
+                <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet
+                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor
+                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus
+                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
             </section>
             <section class="skills">
                 <h2 class="title">Our Skills</h2>
@@ -207,10 +202,10 @@
         <section class="team">
             <div class="content">
                 <h2 class="title center">What is our team structure?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adip iscing elit. Pellentesque imperdiet purus quis metus
-                    imperdiet fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut,
-                    porttitor viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id
-                    lacus id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque imperdiet purus quis metus imperdiet
+                    fermentum. Suspendisse hendrerit id lacus id lobortis. Vestibulum quam elit, dapibus ac augue ut, porttitor
+                    viverra dui. Pellentesque imperdiet purus quis metus imperdiet fermentum. Suspendisse hendrerit id lacus
+                    id lobortis. Vestibulum quam elit, apibus ac augue ut, porttitor viverra dui. Lorem ipsum dolor sit.</p>
                 <ul class="team-img clear">
                     <li>
                         <img src="images/pep.jpg" alt="" />
@@ -237,41 +232,45 @@
                 <i></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.
+                </p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i></i>
-                <span>Inspiring</span>
-                <h3>Graphic Design</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <i class="fa-icon"></i>
+                <span>Collecting</span>
+                <h3>Requirements</h3>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i></i>
-                <span>Implementing</span>
-                <h3>The Template</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <i class="fa-icon"></i>
+                <span>Collecting</span>
+                <h3>Requirements</h3>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i></i>
-                <span>Testing</span>
-                <h3>Functionality</h3>
-                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit
-                    consequipsum.Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
+                <i class="fa-icon"></i>
+                <span>Collecting</span>
+                <h3>Requirements</h3>
+                <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
+                    gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
         </ul>
         <section class="pricing">
             <div class="content">
-                <h2 class="title center"> Pricing Tables</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae
-                    adipiscing diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae
-                    adipiscing diam ultrices nec.</p>
+                <h2 class="title center">
+                    Pricing Tables
+                </h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius nulla mauris, vitae adipiscing
+                    diam ultrices nec. Aliquam sed massa eu nibh commodo. Vestibulum varius nulla mauris, vitae adipiscing
+                    diam ultrices nec.
+                </p>
                 <div class="wrap-box clear">
                     <div class="pricing-table">
                         <div class="tablehead">
@@ -287,7 +286,9 @@
                             <li>10 GB Bandwidth</li>
                             <li>5 GB Diskspace</li>
                             <li class="button">
-                                <a href="#" class="btn">Sign up</a>
+                                <a href="#" class="btn">
+                                    Sign up
+                                </a>
                             </li>
                         </ul>
                     </div>
@@ -297,7 +298,8 @@
                             <i class="fa"></i>
                         </div>
                         <ul>
-                            <li class="price"><span>$9.50</span>/month</li>
+                            <li class="price">
+                                <span>$9.50</span>/month</li>
                             <li>Base Package</li>
                             <li>No support</li>
                             <li>10 Email Address</li>
@@ -371,14 +373,15 @@
                         <input type="email" required="">
                     </div>
                     <div class="form-input clear">
-                        <label>Phone</label>
+                        <label>Phone
+                        </label>
                         <input type="tel">
                     </div>
                     <div class="form-input clear">
                         <label>Message
                             <span class="required">*</span>
                         </label>
-                        <textarea required=""></textarea>
+                        <textarea required="required"></textarea>
                     </div>
                     <div class="form-input">
                         <input type="submit" class="btn" value="Submit">
@@ -512,11 +515,10 @@
             </div>
             <div class="footer-menu clear">
                 <div class="logo"></div>
-                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to
-                    our newsletter.</p>
+                <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to our newsletter.</p>
                 <form class="action">
-                    <input type="email" placeholder="Enter your Email" />
-                    <input type="submit" value="Send" />
+                    <input type="email" value name="EMAIL" placeholder="Enter your Email">
+                    <input type="submit" value="Send">
                 </form>
             </div>
             <div class="footer-menu">
@@ -569,7 +571,7 @@
             </div>
         </div>
         <div class="footerbottom">
-            <div class="content">
+            <div class="row content">
                 <div class="copyrights">
                     © Copyrights
                     <b>EXCEPTION</b> 2014. All rights reserved.
