--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -229,7 +229,7 @@
         <ul class="service-box content clear">
             <li>
                 <!-------------Если вставить разные иконки, есть смысл оставить класс fa?---------------->
-                <i></i>
+                <i class="fa-leaf"></i>
                 <span>Collecting</span>
                 <h3>Requirements</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
@@ -238,25 +238,25 @@
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-icon"></i>
-                <span>Collecting</span>
-                <h3>Requirements</h3>
+                <i class="fa-recycle"></i>
+                <span>Inspiring</span>
+                <h3>Graphic Design</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-icon"></i>
-                <span>Collecting</span>
-                <h3>Requirements</h3>
+                <i class="fa-puzzle"></i>
+                <span>Implementing</span>
+                <h3>The Template</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
             </li>
             <li>
-                <i class="fa-icon"></i>
-                <span>Collecting</span>
-                <h3>Requirements</h3>
+                <i class="fa-legal"></i>
+                <span>Testing</span>
+                <h3>Functionality</h3>
                 <p>Proin gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.Proin
                     gravida nibh vel velit auctor enean sollicitud lorem quis bibendum auctor, nisi elit consequipsum.</p>
                 <a href="">REad More</a>
