--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>EXCEPTION Responsive</title>
+    <title>EXCEPTION - Responsive Business</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="favicon.ico">
@@ -41,7 +41,7 @@
                     <a href="#">Pricing</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">ContAct</a>
                 </li>
             </ul>
         </div>
@@ -49,9 +49,9 @@
     <main>
         <div class="banner">
             <div>
-                <ul class="slide">
-                <li>html5,css3</li>
-            </ul>
+                <span>html5,css3</span>
+                <span>html5,css3</span>
+                <span>html5,css3</span>
             </div>
         </div>
         <div class="box content clear">
