--- a/Final_v1.0/index.html
+++ b/Final_v1.0/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body>
-    <header class="clear">
+    <header>
         <div class="content clear">
-            <a class="logo" href=""></a>
+            <a class="logo" href="#"></a>
             <ul class="nav">
                 <li>
                     <a href="#">Home</a>
